1438-dev-thingspeak-agent: Modify api.properties, ThingspeakAPIConnector and upload ThingspeakAPIConnectorTest

--- a/Agents/ThingspeakAgent/config/api.properties
+++ b/Agents/ThingspeakAgent/config/api.properties
@@ -2,6 +2,8 @@
 # channel number
 thingspeak.channelNumber=1888811
 # api key
-thingspeak.apiKey=test
+thingspeak.apiKey=None
 # no. of results to retrieve
 thingspeak.results=10
+#endpoint url
+path.url=https://api.thingspeak.com/channels/
