--- a/JPS_VIRTUALSENSOR/AermodAgent/docker-compose.yml
+++ b/JPS_VIRTUALSENSOR/AermodAgent/docker-compose.yml
@@ -10,12 +10,17 @@ services:
         condition: none
     environment:
       - STACK_NAME=${STACK_NAME}
-      - PYTHON_SERVICE_URL=http://${STACK_NAME}_python-service:5000
+      - PYTHON_SERVICE_URL=http://python-service:5000/getAermodGeoJSON
       - AERMET_EXE=/root/aermod/aermet # need to match Dockerfile
       - AERMOD_EXE=/root/aermod/aermod # need to match Dockerfile
       - WEATHER_AGENT=http://weatheragent:8080/WeatherAgent/UpdateStation
       - DATABASE=postgres
+      - GEOSERVER_WORKSPACE=dispersion
+      - DISPERSION_LAYER=dispersion_layer
       - SIMULATION_DIR=/root/aermod/simulations
+      - FILE_SERVER_URL=http://file-server:8080/FileServer/
+      - DISPERSION_STYLE_NAME=dispersion_style
+      - VIS_DATA_JSON=/vis_data/data.json
     configs:
       - postgis
       - blazegraph
@@ -28,9 +33,12 @@ services:
       - "8081:8080"
     volumes:
       - logs:/root/.jps
+      - vis_data:/vis_data
     networks:
       - stack
 
 volumes:
   logs:
     name: "logs"
+  vis_data:
+    name: "vis_data"
