dev-PropertyValueEstimationAgent: Include local run configurations

--- a/Agents/PropertyValueEstimationAgent/.vscode/launch.json
+++ b/Agents/PropertyValueEstimationAgent/.vscode/launch.json
@@ -5,8 +5,42 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: Flask App",
             "type": "python",
-            "name": "Debug",
+            "request": "launch",
+            "module": "flask",
+            "env": {
+                "FLASK_APP": "agent:create_app()",
+                "FLASK_ENV": "development",
+                "FLASK_DEBUG": "0"
+            },
+            "args": [
+                "run",
+                //To ensure proper working of VSCodes debugger:
+                //https://flask.palletsprojects.com/en/2.2.x/debugging/#external-debuggers
+                "--no-debugger",
+                "--no-reload"
+            ],
+            "jinja": true
+        },
+        {
+            "name": "Python: Flask within Docker",
+            "type": "python",
+            "request": "attach",
+            "connect": {
+                "host": "127.0.0.1",
+                "port": 5678
+            },
+            "pathMappings": [
+                {
+                    "localRoot": "${workspaceFolder}/agent/",
+                    "remoteRoot": "/app/agent/"
+                }
+            ]
+        },
+        {
+            "type": "python",
+            "name": "Stack: Debug",
             "request": "attach",
             "host": "localhost",
             "port": "${input:debug.port}",
@@ -20,7 +54,7 @@
         },
         {
             "type": "python",
-            "name": "Build and Debug",
+            "name": "Stack: Build and Debug",
             "request": "attach",
             "host": "localhost",
             "port": "${input:debug.port}",
@@ -34,7 +68,7 @@
         },
         {
             "type": "python",
-            "name": "Update JPSRM and Build and Debug",
+            "name": "Stack: Update JPSRM and Build and Debug",
             "request": "attach",
             "host": "localhost",
             "port": "${input:debug.port}",
@@ -48,7 +82,7 @@
         },
         {
             "type": "python",
-            "name": "Reattach and Debug",
+            "name": "Stack: Reattach and Debug",
             "request": "attach",
             "host": "localhost",
             "port": "${input:debug.port.read}",
