--- a/Agents/PropertyValueEstimationAgent/docker-compose.yml
+++ b/Agents/PropertyValueEstimationAgent/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.8"
 
 services:
-  avgsqmprice_agent:
-    image: ghcr.io/cambridge-cares/avgsqmprice_agent:1.0.0-SNAPSHOT
+  propertyvalue_agent:
+    image: ghcr.io/cambridge-cares/propertyvalue_agent:1.0.0-SNAPSHOT
     environment:
       #--- Stack & Stack Client parameters ---#
       - STACK_NAME=${STACK_NAME}
@@ -12,9 +12,9 @@ services:
       - NAMESPACE=buildings
       #--- Derivation Agent parameters ---#
       # For details, see: https://github.com/cambridge-cares/TheWorldAvatar/blob/main/JPS_BASE_LIB/python_derivation_agent/pyderivationagent/conf/agent_conf.py
-      - ONTOAGENT_SERVICE_IRI=http://www.theworldavatar.com/resource/agents/Service__KL_AvgSqmPrice/Service
+      - ONTOAGENT_SERVICE_IRI=http://www.theworldavatar.com/resource/agents/Service__KL_PropertyValueEstimation/Service
       # Host and port of ONTOAGENT_OPERATION_HTTP_URL should match port specified in `port` node below
-      - ONTOAGENT_OPERATION_HTTP_URL=http://localhost:5010/AvgSqmPrice
+      - ONTOAGENT_OPERATION_HTTP_URL=http://localhost:5011/PropertyValueEstimation
       - DERIVATION_INSTANCE_BASE_URL=https://www.theworldavatar.com/kg/derivation/
       - DERIVATION_PERIODIC_TIMESCALE=604800
       - REGISTER_AGENT=true
@@ -31,7 +31,7 @@ services:
       #TODO: Check whether that's still needed
       - LOG4J_FORMAT_MSG_NO_LOOKUPS=true
     ports:
-      - "5010:5000"
+      - "5011:5000"
     volumes:
       - logs:/root/.jps
     configs:
