41-dev-solarkatasteragent: add README and update config.properties

--- a/Agents/SolarkatasterAgent/solarkataster_agent/src/main/resources/config.properties
+++ b/Agents/SolarkatasterAgent/solarkataster_agent/src/main/resources/config.properties
@@ -4,18 +4,18 @@ uri.ontology.ubem=https://www.theworldavatar.com/kg/ontoubemmp/
 
 #--Solarkataster database--#
 # URL of database storing Solarkatastser data
-db.url=jdbc:postgresql://testStack-postgis:5432/postgres
+db.url=jdbc:postgresql://<STACK-NAME>-postgis:5432/postgres
 # Username and password to connect to Solarkataster database
 db.user=DBUSERNAME
 db.password=DBPASSWORD
 
 #--Time series client--#
 # URL of timeseries database
-timeseriesDB.url=jdbc:postgresql://testStack-postgis:5432/timeseries
+timeseriesDB.url=jdbc:postgresql://<STACK-NAME>-postgis:5432/timeseries
 # Username and password to connect to time series database
 ts.user=TSUSERNAME
 ts.password=TSPASSWORD
 # SPARQL query endpoint of triple store
-timeseries.query.endpoint=http://testStack-blazegraph:8080/blazegraph/namespace/kb/sparql/
+timeseries.query.endpoint=http://<STACK-NAME>-blazegraph:8080/blazegraph/namespace/kb/sparql/
 # SPARQL update endpoint of triple store
-timeseries.update.endpoint=http://testStack-blazegraph:8080/blazegraph/namespace/kb/sparql/
+timeseries.update.endpoint=http://<STACK-NAME>-blazegraph:8080/blazegraph/namespace/kb/sparql/
