--- a/Agents/PropertyValueEstimationAgent/tests/agent_test.env
+++ b/Agents/PropertyValueEstimationAgent/tests/agent_test.env
@@ -1,5 +1,5 @@
 ONTOAGENT_SERVICE_IRI=http://www.example.com/resource/agents/Service__KL_PropertyValueEstimation/Service
-ONTOAGENT_OPERATION_HTTP_URL=http://host.docker.internal:5011/PropertyValueEstimation
+ONTOAGENT_OPERATION_HTTP_URL=http://localhost:5011/PropertyValueEstimation
 REGISTER_AGENT=false
 DERIVATION_PERIODIC_TIMESCALE=5
 DERIVATION_INSTANCE_BASE_URL=https://www.example.com/kg/derivation/
