--- a/Agents/FeatureInfoAgent/Dockerfile
+++ b/Agents/FeatureInfoAgent/Dockerfile
@@ -27,9 +27,10 @@ RUN apt-get update && apt-get install -y nano
 
 WORKDIR /app
 
-COPY --from=builder /root/code/output/feature-info-agent##1.0.0-SNAPSHOT.war $CATALINA_HOME/webapps/
+COPY --from=builder /root/code/output/feature-info-agent##2.0.0.war $CATALINA_HOME/webapps/
 COPY --from=builder /root/code/feature-info.properties /root/feature-info.properties
-COPY docker/tomcat-users.xml /usr/local/tomcat/conf/tomcat-users.xml
+COPY ./tomcat-users.xml /usr/local/tomcat/conf/tomcat-users.xml
+COPY ./queries /app
 
 # Start the Tomcat server
 ENTRYPOINT ["catalina.sh", "run"]
