--- a/Agents/FeatureInfoAgent/code/pom.xml
+++ b/Agents/FeatureInfoAgent/code/pom.xml
@@ -4,17 +4,16 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.cmclinnovations</groupId>
     <artifactId>feature-info-agent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>war</packaging>
 
     <!-- Project properties -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.release>17</maven.compiler.release>
 
         <!-- Version of the JPS Base Library to use -->
-        <jps.base.version>1.27.0</jps.base.version>
+        <jps.base.version>1.29.0</jps.base.version>
     </properties>
 
     <!-- Parent POM -->
@@ -56,10 +55,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <release>17</release>
                 </configuration>
             </plugin>
 
@@ -108,6 +106,13 @@
             <version>${jps.base.version}</version>
         </dependency>
 
+        <!-- For interacting with TheStack -->
+        <dependency>
+            <groupId>com.cmclinnovations</groupId>
+            <artifactId>stack-clients</artifactId>
+            <version>1.6.0-272-SNAPSHOT</version>
+        </dependency>
+
         <!-- Java servlet API, version pulled from parent -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -145,26 +150,24 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>4.8.1</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Common IO utilities -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
-        </dependency>
-
-        <!-- ??? -->
-        <dependency>
-            <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-common</artifactId>
-            <version>3.0.0</version>
-        </dependency>
-
-        <!-- For interacting with TheStack -->
-        <dependency>
-            <groupId>com.cmclinnovations</groupId>
-            <artifactId>stack-clients</artifactId>
-            <version>1.0</version>
         </dependency>
 
     </dependencies>
