--- a/Agents/FeatureInfoAgent/docker-compose.yml
+++ b/Agents/FeatureInfoAgent/docker-compose.yml
@@ -3,11 +3,11 @@ version: "3.8"
 services:
 
   feature-info-agent:
-    image: docker.cmclinnovations.com/feature-info-agent:1.0.0-SNAPSHOT
+    image: docker.cmclinnovations.com/feature-info-agent:1.0.0
     build: .
     environment:
       LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
-      PROPERTIES_FILE: "/root/feature-info.properties"
+      FIA_CONFIG_FILE: "/app/queries/fia-config.json"
     configs:
       - blazegraph
       - ontop
