--- a/Agents/OptimisationAgent/resources/timeseries.properties
+++ b/Agents/OptimisationAgent/resources/timeseries.properties
@@ -5,7 +5,7 @@
 
 ###--- URL to connect to PostgreSQL database ---###
 # For local script deployment with Postgres running via docker-compose
-db.url = jdbc:postgresql://localhost:5432/ontoheatnetwork
+db.url = jdbc:postgresql://localhost:5432/districtheating
 # For script deployment in Docker with access to local Postgres
 #db.url = jdbc:postgresql://host.docker.internal:5432/ontoheatnetwork
 
@@ -17,8 +17,8 @@ db.password = postgres
 
 ###--- Full SPARQL Query and Update endpoints of triple store ---###
 # For local script deployment with Blazegraph running via docker-compose
-sparql.query.endpoint = http://localhost:48889/blazegraph/namespace/ontoheatnet/sparql
-sparql.update.endpoint = http://localhost:48889/blazegraph/namespace/ontoheatnet/sparql
+sparql.query.endpoint = http://localhost:48889/blazegraph/namespace/districtheating/sparql
+sparql.update.endpoint = http://localhost:48889/blazegraph/namespace/districtheating/sparql
 
 # For script deployment in Docker with access to local Blazegraph
 #sparql.query.endpoint = http://host.docker.internal:48889/blazegraph/namespace/ontoheatnet/sparql
