--- a/Agents/FeatureInfoAgent/Dockerfile
+++ b/Agents/FeatureInfoAgent/Dockerfile
@@ -21,7 +21,7 @@ RUN --mount=type=cache,target=/root/.m2/repository mvn package
 
 # Second stage: copy the downloaded dependency into a new image and build into an app
 #==================================================================================================
-FROM tomcat:9.0.69-jdk17-corretto as agent
+FROM tomcat:9.0.69-jdk17 as agent
 
 RUN apt-get update && apt-get install -y nano
 
