--- a/Agents/FeatureInfoAgent/docker-compose.yml
+++ b/Agents/FeatureInfoAgent/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
 
   feature-info-agent:
-    image: docker.cmclinnovations.com/feature-info-agent:1.0.0
+    image: ghcr.io/cambridge-cares/feature-info-agent:2.0.0
     build: .
     environment:
       LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
