--- a/Agents/PropertyValueEstimationAgent/.vscode/launch.json
+++ b/Agents/PropertyValueEstimationAgent/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "module": "flask",
             "env": {
-                "FLASK_APP": "agent:create_app()",
+                "FLASK_APP": "${input:agentname}:create_app()",
                 "FLASK_ENV": "development",
                 "FLASK_DEBUG": "0"
             },
@@ -33,8 +33,8 @@
             },
             "pathMappings": [
                 {
-                    "localRoot": "${workspaceFolder}/agent/",
-                    "remoteRoot": "/app/agent/"
+                    "localRoot": "${workspaceFolder}/${input:agentname}/",
+                    "remoteRoot": "/app/${input:agentname}/"
                 }
             ]
         },
@@ -47,8 +47,8 @@
             "preLaunchTask": "compose-deploy",
             "pathMappings": [
                 {
-                    "localRoot": "${workspaceFolder}/agent",
-                    "remoteRoot": "/app/agent"
+                    "localRoot": "${workspaceFolder}/${input:agentname}",
+                    "remoteRoot": "/app/${input:agentname}"
                 }
             ]
         },
@@ -61,8 +61,8 @@
             "preLaunchTask": "compose-build-deploy",
             "pathMappings": [
                 {
-                    "localRoot": "${workspaceFolder}/agent",
-                    "remoteRoot": "/app/agent"
+                    "localRoot": "${workspaceFolder}/${input:agentname}",
+                    "remoteRoot": "/app/${input:agentname}"
                 }
             ]
         },
@@ -75,8 +75,8 @@
             "preLaunchTask": "update-compose-build-deploy",
             "pathMappings": [
                 {
-                    "localRoot": "${workspaceFolder}/agent",
-                    "remoteRoot": "/app/agent"
+                    "localRoot": "${workspaceFolder}/${input:agentname}",
+                    "remoteRoot": "/app/${input:agentname}"
                 }
             ]
         },
@@ -88,8 +88,8 @@
             "port": "${input:debug.port.read}",
             "pathMappings": [
                 {
-                    "localRoot": "${workspaceFolder}/agent",
-                    "remoteRoot": "/app/agent"
+                    "localRoot": "${workspaceFolder}/${input:agentname}",
+                    "remoteRoot": "/app/${input:agentname}"
                 }
             ]
         }
@@ -112,6 +112,23 @@
             "command": "shellCommand.execute",
             "args": {
                 "command": "bash ./stack.sh ports read",
+                "useFirstResult": true
+            }
+        },
+        {
+            "id": "agentname",
+            "type": "command",
+            // Get agentname (equivalent to agent repository name) from setup.py
+            "command": "shellCommand.execute",
+            // TODO: Platform specific commands to be revisited
+            // Linux (n/a option to be commented out):
+            //"args": {
+            //    "command": "python3 setup.py --name",
+            //    "useFirstResult": true
+            //},
+            // Windows (n/a option to be commented out): 
+            "args": {
+                "command": "python setup.py --name",
                 "useFirstResult": true
             }
         }
