dev-PropertyValueEstimationAgent: Update path for volume and Flask app in debug Docker image

--- a/Agents/PropertyValueEstimationAgent/Dockerfile
+++ b/Agents/PropertyValueEstimationAgent/Dockerfile
@@ -49,8 +49,7 @@ FROM base as debug
 RUN pip install debugpy
 
 # Set flask app and development environment to allow for hot-reloading
-# TODO: path to be verified on DO
-ENV FLASK_APP=app/$AGENTDIR/agent:create_app()
+ENV FLASK_APP=app/${AGENTDIR}:create_app()
 ENV FLASK_DEBUG=1
 
 # Launch application in container
