--- a/Deploy/stacks/dynamic/stack-clients/pom.xml
+++ b/Deploy/stacks/dynamic/stack-clients/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.cmclinnovations</groupId>
   <artifactId>stack-clients</artifactId>
-  <version>1.5.5-blazegraph-getServiceURL-SNAPSHOT</version>
+  <version>1.5.5</version>
 
   <name>Stack Clients</name>
   <url>https://www.cmclinnovations.com</url>
