--- a/Agents/PropertyValueEstimationAgent/tests/agent_test.env
+++ b/Agents/PropertyValueEstimationAgent/tests/agent_test.env
@@ -1,6 +1,6 @@
 ONTOAGENT_SERVICE_IRI=http://www.example.com/resource/agents/Service__KL_PropertyValueEstimation/Service
 ONTOAGENT_OPERATION_HTTP_URL=http://localhost:5011/PropertyValueEstimation
-REGISTER_AGENT=false
+REGISTER_AGENT=true
 DERIVATION_PERIODIC_TIMESCALE=5
 DERIVATION_INSTANCE_BASE_URL=https://www.example.com/kg/derivation/
 SPARQL_QUERY_ENDPOINT=
