--- a/Agents/PropertyValueEstimationAgent/docker-compose-stack.yml
+++ b/Agents/PropertyValueEstimationAgent/docker-compose-stack.yml
@@ -8,7 +8,7 @@ services:
       restart_policy:
         condition: none
     environment:
-      - "STACK_NAME=${STACK_NAME}"
+      - STACK_NAME=${STACK_NAME}
     security_opt:
       - label=disable
     volumes:
