--- a/Agents/PropertyValueEstimationAgent/docker-compose-test_dockerised.yml
+++ b/Agents/PropertyValueEstimationAgent/docker-compose-test_dockerised.yml
@@ -5,7 +5,7 @@ services:
     image: ghcr.io/cambridge-cares/propertyvalue_agent_test:1.0.0-SNAPSHOT
     build:
       context: .
-      target: debug_test
+      target: test
       args:
         # Build argument used to construct paths in Dockerfile (needs to match name in setup.py)
         agentdir: propertyvalueestimation
@@ -20,7 +20,7 @@ services:
       - NAMESPACE=buildings
       #--- Derivation Agent parameters ---#
       - ONTOAGENT_SERVICE_IRI=http://www.example.com/resource/agents/Service__KL_PropertyValueEstimation/Service
-      - ONTOAGENT_OPERATION_HTTP_URL=http://host.docker.internal:5011/PropertyValueEstimation
+      - ONTOAGENT_OPERATION_HTTP_URL=http://localhost:5011/PropertyValueEstimation
       - DERIVATION_INSTANCE_BASE_URL=https://www.example.com/kg/derivation/
       - DERIVATION_PERIODIC_TIMESCALE=200
       - REGISTER_AGENT=false
@@ -37,11 +37,7 @@ services:
       - LOG4J_FORMAT_MSG_NO_LOOKUPS=true
     ports:
       - 5011:5000
-      - 5678:5678
     volumes:
       # To run docker inside docker, mount default Unix socket docker.sock as a volume
       # (https://devopscube.com/run-docker-in-docker/)
       - /var/run/docker.sock:/var/run/docker.sock
-      # Mount agent code as well as tests as volumes
-      - ./propertyvalueestimation:/app/propertyvalueestimation
-      - ./tests:/app/tests
