--- a/Agents/PropertyValueEstimationAgent/Dockerfile
+++ b/Agents/PropertyValueEstimationAgent/Dockerfile
@@ -110,24 +110,24 @@ RUN pip install gunicorn
 WORKDIR /app
 COPY ./$AGENTDIR ./$AGENTDIR
 COPY ./tests ./tests
-
 # Copy docker-compose-file to spin up testcontainers
 COPY ./docker-compose-testcontainers.yml ./docker-compose.yml
 
+# Ensure SPARQL endpoints contain 'docker.host.internal' instead of 'localhost' for dockerised agent tests
+RUN sed -i "s|localhost|host.docker.internal|g" ./tests/mockutils/env_configs_mock.py
+RUN sed -i "s|localhost|host.docker.internal|g" ./tests/mockutils/stack_configs_mock.py
+# Ensure flag for Dockerised tests is set to True
+RUN sed -i "s|False|True|g" ./tests/mockutils/env_configs_mock.py
+
 # Overwrite/Mock all stack interactions with pre-defined settings from testing Docker stack
-COPY ./tests/mockutils/env_configs_mock.py ./$AGENTDIR/utils/env_configs.py
-COPY ./tests/mockutils/stack_configs_mock.py ./$AGENTDIR/utils/stack_configs.py
+RUN cp ./tests/mockutils/env_configs_mock.py ./$AGENTDIR/utils/env_configs.py
+RUN cp ./tests/mockutils/stack_configs_mock.py ./$AGENTDIR/utils/stack_configs.py
 # Adjust relative import statement
 RUN sed -i "s|env_configs_mock|env_configs |g" ./$AGENTDIR/utils/stack_configs.py
 
-# Ensure SPARQL endpoints contain 'docker.host.internal' instead of 'localhost' for dockerised agent tests
-RUN sed -i "s|localhost|host.docker.internal|g" ./$AGENTDIR/utils/env_configs.py
-RUN sed -i "s|localhost|host.docker.internal|g" ./$AGENTDIR/utils/stack_configs.py
-# Ensure flag for Dockerised tests is set to True
-RUN sed -i "s|False|True|g" ./$AGENTDIR/utils/env_configs.py
-
-# Set the entrypoint
-ENTRYPOINT pytest
+# Start dockerised agent app as well as pytest
+# (combining commands using & ensures they are started in parallel in background)
+CMD gunicorn --bind 0.0.0.0:5000 "${AGENTDIR}:create_app()" & pytest
 
 
 #==================================================================================================
