dev-PropertyValueEstimationAgent: Finalised Dockerised tests

--- a/Agents/PropertyValueEstimationAgent/docker-compose-test_dockerised_debug.yml
+++ b/Agents/PropertyValueEstimationAgent/docker-compose-test_dockerised_debug.yml
@@ -11,13 +11,12 @@ services:
         agentdir: propertyvalueestimation
     environment:
       # The following environment variables are required for the agent Docker container to start
-      # Similar as in the `agent_test.env` file for local testing, triple store endpoints are just 
+      # Similar to the `agent_test.env` file for local testing, triple store endpoints are just 
       # placeholders and "overwritten" by the mocked `stack_configs.py` module. However, some entry
       # is required to avoid Exceptions from the AgentConfig class (same applies to other keywords left blank)
-      #--- Stack & Stack Client parameters ---#
-      - STACK_NAME=TESTS
-      - DATABASE=postgres
-      - NAMESPACE=buildings
+      #
+      # Stack & Stack Client parameters can be neglected as overwritten by mocked module imports
+      #
       #--- Derivation Agent parameters ---#
       - ONTOAGENT_SERVICE_IRI=http://www.example.com/resource/agents/Service__KL_PropertyValueEstimation/Service
       - ONTOAGENT_OPERATION_HTTP_URL=http://localhost:5011/PropertyValueEstimation
@@ -33,8 +32,6 @@ services:
       - FILE_SERVER_ENDPOINT=''
       - FILE_SERVER_USERNAME=''
       - FILE_SERVER_PASSWORD=''
-      #--- Miscellaneous ---#
-      - LOG4J_FORMAT_MSG_NO_LOOKUPS=true
     ports:
       - 5011:5000
       - 5678:5678
