43-dev-pvlib-agent: Replace tsClient with tsClientForQuery and tsClientForUpdate to take into consideration that the postgresql query and update endpoints can be different and modify ts_client.properties and utils accordingly

--- a/Agents/PVLibAgent/resources/ts_client.properties
+++ b/Agents/PVLibAgent/resources/ts_client.properties
@@ -1,18 +1,25 @@
 ###--- Properties for JAVA TimeSeriesClient ---###
 
 # URL to connect to PostgreSQL database
-db.url = jdbc:postgresql://host.docker.internal:5432/CARESWeatheragent
+db.query.url = jdbc:postgresql://host.docker.internal:5432/illuminanceSensorTimeseries
 
 # Username to connect to PostgreSQL database
-db.user = postgres
+db.query.user = postgres
 
 # Password to connect to PostgreSQL database
-db.password = test
+db.query.password = postgres
+
+db.update.url = jdbc:postgresql://host.docker.internal:5432/test
+
+db.update.user = postgres
+
+db.update.password = postgres
 
 # Full SPARQL Query and Update endpoints of triple store (also required by Java TimeSeriesClient)
-sparql.query.endpoint = http://host.docker.internal:9999/blazegraph/namespace/weatherStationCARES/sparql
+sparql.query.endpoint = http://host.docker.internal:9999/blazegraph/namespace/illuminanceSensor/sparql
 # http://www.theworldavatar.com/blazegraph/namespace/weatherStationCARES/sparql
-sparql.update.endpoint = http://host.docker.internal:9999/blazegraph/namespace/weatherStationCARES/sparql
+sparql.update.endpoint = http://host.docker.internal:9999/blazegraph/namespace/test/sparql
 
 # iri of sensor or weather station entity that has rdf:type sensor or rdf:type ontoems:ReportingStation
 iri = 
+# <http://www.theworldavatar.com/devices/IlluminanceIOTSensor-01>
