43-dev-pvlib-agent: Modify app, utils and ts_client.properties to allow for input of data IRIs directly

--- a/Agents/PVLibAgent/resources/ts_client.properties
+++ b/Agents/PVLibAgent/resources/ts_client.properties
@@ -1,7 +1,7 @@
 ###--- Properties for JAVA TimeSeriesClient ---###
 
-# URL to connect to PostgreSQL database
-db.query.url = jdbc:postgresql://host.docker.internal:5432/illuminanceSensorTimeseries
+# URL to connect to PostgreSQL database for querying
+db.query.url = jdbc:postgresql://host.docker.internal:5432/sensor
 
 # Username to connect to PostgreSQL database
 db.query.user = postgres
@@ -9,17 +9,26 @@ db.query.user = postgres
 # Password to connect to PostgreSQL database
 db.query.password = postgres
 
+# URL to connect to PostgreSQL database for updating
 db.update.url = jdbc:postgresql://host.docker.internal:5432/test
 
+# Username to connect to PostgreSQL database
 db.update.user = postgres
 
+# Password to connect to PostgreSQL database
 db.update.password = postgres
 
 # Full SPARQL Query and Update endpoints of triple store (also required by Java TimeSeriesClient)
-sparql.query.endpoint = http://host.docker.internal:9999/blazegraph/namespace/illuminanceSensor/sparql
+sparql.query.endpoint = http://host.docker.internal:9999/blazegraph/namespace/sensor/sparql
+
 
 sparql.update.endpoint = http://host.docker.internal:9999/blazegraph/namespace/test/sparql
 
-# iri of sensor or weather station entity that has rdf:type sensor or rdf:type ontoems:ReportingStation
+# iri of sensor or weather station entity that has rdf:type sensor or rdf:type ontoems:ReportingStation, can be left blank
 iri = 
-# <http://www.theworldavatar.com/devices/IlluminanceIOTSensor-01>
+
+
+#data iri of air temperature, wind speed and irradiance, can be left blank
+air.temperature.iri = 
+wind.speed.iri = 
+irradiance.iri = 
