--- a/Agents/DerivationAgentPythonExample/requirements.txt
+++ b/Agents/DerivationAgentPythonExample/requirements.txt
@@ -1,3 +1,6 @@
+# The purpose of this file is to pin a list of packages to a specific version that is tested to work
+# This file is used by the Dockerfile to ensure consistent builds across different machines
+
 #######################################
 ## The World Avatar related packages ##
 #######################################
