43-dev-pvlib-agent: Modify solar_model.py to be able to convert timestamp to localtime based on weather station/sensor locations

--- a/Agents/PVLibAgent/resources/model_parameters.properties
+++ b/Agents/PVLibAgent/resources/model_parameters.properties
@@ -8,10 +8,10 @@ temp_model =sapm
 temp_model_config = open_rack_glass_glass
 
 #latitude, can be left empty where the agent will then query the latitude from the knowledge graph
-latitude = 32.2
+latitude = 
 
 #longitude, can be left empty where the agent will then query the longitude from the knowledge graph
-longitude = -110.9
+longitude = 
 
 #altitude
 altitude = 0
