--- a/Agents/PVLibAgent/requirements.txt
+++ b/Agents/PVLibAgent/requirements.txt
@@ -7,4 +7,5 @@ py4jps==1.0.27
 requests==2.28.1
 configobj~=5.0
 psycopg2-binary~=2.9
+timezonefinder~=6.0.1
 git+https://github.com/cambridge-cares/TheWorldAvatar@main#subdirectory=Agents/utils/python-utils
