43-dev-pvlib-agent: Add utils-test.py, ts_client.properties file for testing and modify requirements.txt to include pytest

--- a/Agents/PVLibAgent/requirements.txt
+++ b/Agents/PVLibAgent/requirements.txt
@@ -8,4 +8,5 @@ configobj~=5.0
 psycopg2-binary~=2.9
 timezonefinder~=6.0.1
 python-dateutil~=2.8.2
+pytest==7.2.0
 git+https://github.com/cambridge-cares/TheWorldAvatar@main#subdirectory=Agents/utils/python-utils
