43-dev-pvlib-agent: Modify test ts_client.properties, add docker-compose.test.yml for unit tests, upload query_data-test.py

--- a/Agents/PVLibAgent/PVLibAgent/kg_utils/resources/ts_client.properties
+++ b/Agents/PVLibAgent/PVLibAgent/kg_utils/resources/ts_client.properties
@@ -1,28 +1,27 @@
 ###--- Properties for JAVA TimeSeriesClient ---###
 
 # URL to connect to PostgreSQL database for querying
-db.query.url = jdbc:postgresql://host.docker.internal:5432/test
+db.query.url = jdbc:postgresql://localhost:7432/test
 
 # Username to connect to PostgreSQL database
-db.query.user = test
+db.query.user = postgres
 
 # Password to connect to PostgreSQL database
-db.query.password = test
+db.query.password = postgres
 
 # URL to connect to PostgreSQL database for updating
-db.update.url = jdbc:postgresql://host.docker.internal:5432/test
+db.update.url = jdbc:postgresql://localhost:7432/test
 
 # Username to connect to PostgreSQL database
-db.update.user = test
+db.update.user = postgres
 
 # Password to connect to PostgreSQL database
-db.update.password = test
+db.update.password = postgres
 
 # Full SPARQL Query and Update endpoints of triple store (also required by Java TimeSeriesClient)
-sparql.query.endpoint = test
+sparql.query.endpoint = http://localhost:27149/blazegraph/namespace/kb/sparql
 
-
-sparql.update.endpoint = test
+sparql.update.endpoint = http://localhost:27149/blazegraph/namespace/kb/sparql
 
 # iri of sensor or weather station entity that has rdf:type sensor or rdf:type ontoems:ReportingStation, can be left blank
 iri = 
